--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name = 'asyncreader'
+name = 'asyncio'
 version = '0.1.0'
 edition = '2021'
 
 [lib]
 crate-type = [ 'staticlib' ]
-name = 'asyncreader'
+name = 'asyncio'
 
 [dependencies]
 extendr-api = '*'
+threadpool = "1.8.1"
